--- a/.github/workflows/Demo1.yml
+++ b/.github/workflows/Demo1.yml
@@ -5,4 +5,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: my-step
-        run: print("Hello World Python!")
+        run: print("Hello World!")
