--- a/.github/workflows/Demo1.yml
+++ b/.github/workflows/Demo1.yml
@@ -19,4 +19,4 @@ jobs:
           python-version: '3.10'
       
       - name: Run GithubActions
-        run: python python.py
+        run: python python1.py
