--- a/.github/workflows/PythonWorkflowDemo.yml
+++ b/.github/workflows/PythonWorkflowDemo.yml
@@ -1,22 +1,32 @@
-name: Python_Script_Workflows
+name: Run Python Script
 
 on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
   run-python-script:
     runs-on: ubuntu-latest
-    
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
 
-      - name: Set up Python
-        uses: actions/setup-python@v5 
+    steps:
+      # Step 1: Checkout the repository
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      # Step 2: Set up Python environment
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      
-      - name: Run GithubActions
+
+      # Step 3: Install dependencies
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      # Step 4: Run the Python script
+      - name: Run Python script
         run: python python1.py
