--- a/.github/workflows/PythonWorkflowDemo.yml
+++ b/.github/workflows/PythonWorkflowDemo.yml
@@ -21,9 +21,9 @@ jobs:
         with:
           python-version: '3.10'
 
-      # Step 3: Install dependencies
+      # Step 3: Upgrade pip and install dependencies
       - name: Install dependencies
-        run: 
+        run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
