--- a/.github/workflows/PythonWorkflowDemo.yml
+++ b/.github/workflows/PythonWorkflowDemo.yml
@@ -21,12 +21,15 @@ jobs:
         with:
           python-version: '3.10'
 
-      # Step 3: Upgrade pip and install dependencies
+      # Step 3: Install dependencies
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      # Step 4: Run the Python script
-      - name: Run Python script
-        run: python python1.py
+      # Step 4: Run the Flask app in the background
+      - name: Run Flask app
+        run: |
+          python python1.py &
+          sleep 10  # Wait for Flask to start
+          echo "Flask app started successfully!"
