--- a/.github/workflows/PythonWorkflowDemo.yml
+++ b/.github/workflows/PythonWorkflowDemo.yml
@@ -11,25 +11,25 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout the repository
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # Step 2: Set up Python environment
       - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
 
-      # Step 3: Install dependencies
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      # Step 4: Run the Flask app in the background
-      - name: Run Flask app
+      - name: Start Flask server
         run: |
           python python1.py &
-          sleep 10  # Wait for Flask to start
-          echo "Flask app started successfully!"
+          sleep 5  # Wait for the Flask server to start
+
+      - name: Test Flask server
+        run: |
+          echo "Testing Flask server..."
+          curl http://127.0.0.1:3000
